--- a/index.html
+++ b/index.html
@@ -4,33 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width= 1280, height= 1040 initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title></title>
   <link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
 
-<!-- Main Header for Art Gallery-->
+<!-- Main Header for Art Gallery -->
   <header>
-    <h1 class="main"> Gallery of Minimalism
-    </h1>
+    <h1 class="main-header"> This is "ART"</h1>
   </header>
 
-  <div class="group">
-    <img src="/assets/bike.jpg">
-  </div>
-  <div class="group">
-    
-    <img src="/assets/colorful-pineapple.jpg">
-  </div>
-  <div class="group">
-    <img src="/assets/light.jpg">
-  </div>
-  <footer>
-
-  </footer>
+ <!-- Main Body for all content --> 
+  <main>
+    <div class="group">
+        <img src="/assets/bike.jpg" alt="This is an artisty bike">
+        <p><a href="https://en.wikipedia.org/wiki/Art_bike">Lonely Bike</p></a>
+    </div>
+    <div class="group">
+      <img class ="favorite" src="/assets/colorful-pineapple.jpg" alt="This is an unnaturally colored pineapple"> 
+      <p><a class="favorite-link" href="https://en.wikipedia.org/wiki/Pineapple_Dance_Studios">Painted Pineapple</a></p>
+    </div>
+    <div class="group">
+      <img src="/assets/light.jpg" alt=" Just a light hanging from a ceiling">
+      <p><a href="https://en.wikipedia.org/wiki/Tiffany_lamp">"Just a Lamp Shade"</a></p>
+    </div>
+  </main>
 </body>
-
-
-
-</footer>
 </html>
