Noticed a problem, resolved it

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <img src="/assets/bike.jpg" alt="This is an artisty bike">
         <p><a href="https://en.wikipedia.org/wiki/Art_bike">Lonely Bike</p></a>
     </div>
-    <div class="group">
-      <img class ="favorite" src="/assets/colorful-pineapple.jpg" alt="This is an unnaturally colored pineapple"> 
-      <p><a class="favorite-link" href="https://en.wikipedia.org/wiki/Pineapple_Dance_Studios">Painted Pineapple</a></p>
+    <div class="group-favorite">
+      <img src="/assets/colorful-pineapple.jpg" alt="This is an unnaturally colored pineapple"> 
+      <p><a href="https://en.wikipedia.org/wiki/Pineapple_Dance_Studios">Painted Pineapple</a></p>
     </div>
     <div class="group">
       <img src="/assets/light.jpg" alt=" Just a light hanging from a ceiling">
